--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   </style>
 </head>
 <body>
-  <h1>Дашборды по анализируемым территориям</h1>
+  <h1>Результаты анализа точек притяжения города Байкальска</h1>
 
   <div class="viz-container">
     <div class="title">1. Анализ туристических маршрутов города Иркутск</div>
