--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
   <h1>Результаты анализа точек притяжения города Байкальска</h1>
 
   <div class="viz-container">
-    <div class="title">1. Анализ туристических маршрутов города Иркутск</div>
+    <div class="title">1. Анализ туристических точек города Байкальск</div>
     <div id="viz1"></div>
   </div>
 
   <div class="viz-container">
-    <div class="title">2. Анализ туристических маршрутов острова Ольхон</div>
+    <div class="title">2. Оценка места в виде сетчатой карты</div>
     <div id="viz2"></div>
   </div>
 
