--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   </div>
 
   <div class="viz-container">
-    <div class="title">3. Анализ туристических маршрутов Листвянки</div>
+    <div class="title">3. Погода по годам</div>
     <div id="viz3"></div>
   </div>
 
@@ -50,7 +50,7 @@
     const vizURLs = [
       "https://public.tableau.com/views/_17516300466340/sheet3?:language=en-US&publish=yes&:sid=&:display_count=n&:origin=viz_share_link",
       "https://public.tableau.com/views/_17516279933130/sheet1?:language=en-US&:sid=&:display_count=n&:origin=viz_share_link",
-      "https://public.tableau.com/views/_17473129003450/Dashboard1?:language=en-US&:sid=&:redirect=auth&:display_count=n&:origin=viz_share_link"
+      "https://public.tableau.com/views/_17514682151670/sheet0?:language=en-US&publish=yes&:sid=&:redirect=auth&:display_count=n&:origin=viz_share_link"
     ];
 
     const vizOptions = {
