--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       font-size: 20px;
       margin-bottom: 10px;
     }
-    #viz1, #viz2, #viz3 {
+    #viz1, #viz2, #viz3, #viz4 {
       width: 100%;
       height: 700px;
       border: 1px solid #ccc;
