--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
   <div class="viz-container">
     <div class="title">4. Туристические маршруты Байкальска</div>
-    <div id="viz4"><img src="map.png" width="1000"></div>
+    <div id="viz4"></div>
   </div>
 
   <script>
