--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       font-size: 20px;
       margin-bottom: 10px;
     }
-    #viz1, #viz2, #viz3, #viz4 {
+    #viz1, #viz2, #viz3, #viz4, #viz5 {
       width: 100%;
       height: 700px;
       border: 1px solid #ccc;
@@ -46,12 +46,18 @@
     <div id="viz4"></div>
   </div>
 
+  <div class="viz-container">
+    <div class="title">5. Автобусные маршруты Байкальска</div>
+    <div id="viz5"></div>
+  </div>
+
   <script>
     const vizURLs = [
       "https://public.tableau.com/views/_17516300466340/sheet3?:language=en-US&publish=yes&:sid=&:display_count=n&:origin=viz_share_link",
       "https://public.tableau.com/views/_17516279933130/sheet1?:language=en-US&:sid=&:display_count=n&:origin=viz_share_link",
       "https://public.tableau.com/views/_17514682151670/sheet0?:language=en-US&publish=yes&:sid=&:redirect=auth&:display_count=n&:origin=viz_share_link",
-      "https://public.tableau.com/views/Book1_17452515313010/sheet0?:language=en-US&publish=yes&:sid=&:redirect=auth&:display_count=n&:origin=viz_share_link"
+      "https://public.tableau.com/views/Book1_17452515313010/sheet0?:language=en-US&publish=yes&:sid=&:redirect=auth&:display_count=n&:origin=viz_share_link",
+      "https://public.tableau.com/views/_17516686035620/sheet0?:language=en-US&publish=yes&:sid=&:redirect=auth&:display_count=n&:origin=viz_share_link"
     ];
 
     const vizOptions = {
@@ -65,6 +71,7 @@
     new tableau.Viz(document.getElementById("viz2"), vizURLs[1], vizOptions);
     new tableau.Viz(document.getElementById("viz3"), vizURLs[2], vizOptions);
     new tableau.Viz(document.getElementById("viz4"), vizURLs[3], vizOptions);
+    new tableau.Viz(document.getElementById("viz5"), vizURLs[4], vizOptions);
     
   </script>
 </body>
