--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <h1>Результаты анализа точек притяжения города Байкальска</h1>
 
   <div class="viz-container">
-    <div class="title">1. Анализ туристических точек города Байкальск</div>
+    <div class="title">1. Анализ туристических точек города Байкальска</div>
     <div id="viz1"></div>
   </div>
 
