--- a/index.html
+++ b/index.html
@@ -51,13 +51,19 @@
     <div id="viz5"></div>
   </div>
 
+  <div class="viz-container">
+    <div class="title">6. Плотность застройки</div>
+    <div id="viz6"></div>
+  </div>
+
   <script>
     const vizURLs = [
       "https://public.tableau.com/views/_17516300466340/sheet3?:language=en-US&publish=yes&:sid=&:display_count=n&:origin=viz_share_link",
       "https://public.tableau.com/views/_17516279933130/sheet1?:language=en-US&:sid=&:display_count=n&:origin=viz_share_link",
       "https://public.tableau.com/views/_17514682151670/sheet0?:language=en-US&publish=yes&:sid=&:redirect=auth&:display_count=n&:origin=viz_share_link",
       "https://public.tableau.com/views/Book1_17452515313010/sheet0?:language=en-US&publish=yes&:sid=&:redirect=auth&:display_count=n&:origin=viz_share_link",
-      "https://public.tableau.com/views/_17516686035620/sheet0?:language=en-US&publish=yes&:sid=&:redirect=auth&:display_count=n&:origin=viz_share_link"
+      "https://public.tableau.com/views/_17516686035620/sheet0?:language=en-US&publish=yes&:sid=&:redirect=auth&:display_count=n&:origin=viz_share_link",
+      "ССЫЛКУ С ПЛОТНОТСТЬЮ СЮДА"
     ];
 
     const vizOptions = {
@@ -72,7 +78,7 @@
     new tableau.Viz(document.getElementById("viz3"), vizURLs[2], vizOptions);
     new tableau.Viz(document.getElementById("viz4"), vizURLs[3], vizOptions);
     new tableau.Viz(document.getElementById("viz5"), vizURLs[4], vizOptions);
-    
+    new tableau.Viz(document.getElementById("viz6"), vizURLs[5], vizOptions);
   </script>
 </body>
 </html>
